# alarm-clock

./: .gitignore  LICENSE  README.md  build-macos.sh  index.html  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: windows-portable.yml
docs/releases/: v1.0.1.md  v2.0.0.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/native/: location_bridge.m
src-tauri/src/: lib.rs  main.rs
src/components/: AlarmWidget.tsx  JingerLogo.tsx  PomodoroQuoteCard.tsx  PomodoroTimer.tsx  WeatherWidget.tsx
src/hooks/: useLocation.ts  usePomodoro.ts  useSettings.ts  useWeather.ts
src/utils/: date.ts  pomodoroQuotes.ts
